test/trivial/deitz/test_assign_const.good
test_assign_const.chpl:2: error: illegal lvalue in assignment
